<resources>
    <string name="app_name">FriendTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">Inscription</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_main">FriendTracker</string>
    <string name="title_activity_appointments">Sorties</string>
    <string name="title_activity_friends">Amis</string>
    <string name="title_activity_groups">Groupes</string>
    <string name="title_activity_parameters">Paramètres de l\'application</string>
    <string name="title_activity_profile">Mon profil</string>

    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <string name="hint_email">Adresse Mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_firstname">Nom</string>
    <string name="hint_lastname">Prénom</string>
    <string name="hint_phoneNumber">Téléphone</string>
    <string name="btn_login">S\'inscrire</string>
    <string name="btn_forgot_password">Vous avez oublié votre mot de passe ?</string>
    <string name="btn_register">Se connecter</string>
    <string name="btn_link_to_login">Déjà inscrit ? Connectez-vous</string>
    <string name="btn_link_to_register">Pas encore Inscrit ? Inscrivez-vous</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="groups_button">Groupes</string>
    <string name="appointment_creation_button">Mes sorties</string>
    <string name="friends_button">Mes amis</string>
    <string name="friends_adding_button">Ajouter un ami</string>
    <string name="appointments_button">Mes rendez-vous</string>
    <string name="profile_button">Profil</string>
    <string name="parameters_button">Paramètres</string>


    <string name="on_foot">on_foot</string>
    <string name="in_vehicle">in_vehicle</string>
    <string name="on_bicycle">on_bicycle</string>
    <string name="walking">walking</string>
    <string name="running">running</string>
    <string name="tilting">tilting</string>
    <string name="standing">standing</string>

    <string name="title_activity_group_creation">Groupes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="THEME1">Thème principal</string>
    <string name="THEME2">Thème sombre</string>
    <string name="THEME3">Thème gillet jaune</string>
</resources>
