<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ParametersActivity"
    android:background="?colorPrimaryDark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/themeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="Mes Thèmes"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/defaultThemeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/THEME1" />

        <Switch
            android:id="@+id/theme1Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/THEME2" />

        <Switch
            android:id="@+id/theme2Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:checked="false"
            android:text="@string/THEME3" />

    </LinearLayout>

    <Button
        android:id="@+id/validateParametersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="?colorPrimary"
        android:text="valider les changements"
        android:textColor="?colorAccent" />

    <TextView
        android:id="@+id/messageWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="L'application sera redémarrée si vous changez de thème."
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10dp"
        android:textStyle="bold" />


</LinearLayout>